--- a/案例/面向对象/对象完美继承方案.html
+++ b/案例/面向对象/对象完美继承方案.html
@@ -70,7 +70,7 @@
         Object.defineProperty(Child1.prototype, 'constructor', {
             writable: false,
             enumerable: false,
-            constructor: false,
+            configurable: false,
             value: Child1
         })
 
